--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,16 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     implementation 'com.google.android.exoplayer:exoplayer-core:2.16.1'
 //    implementation 'com.google.android.exoplayer:exoplayer-dash:2.16.1'
 //    implementation 'com.google.android.exoplayer:exoplayer-ui:2.16.1'
+    //协程
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 }
