--- a/videoPlayer/build.gradle
+++ b/videoPlayer/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
 
@@ -7,11 +7,13 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.akame.videoplayer"
         minSdk 21
         targetSdk 31
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -27,25 +29,15 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
     buildFeatures {
         viewBinding true
     }
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-
-//    implementation 'com.google.android.exoplayer:exoplayer-core:2.16.1'
-//    implementation 'com.google.android.exoplayer:exoplayer-dash:2.16.1'
-//    implementation 'com.google.android.exoplayer:exoplayer-ui:2.16.1'
-    //协程
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.16.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
-
-    implementation project(':videoPlayer')
 }
