解决旋转状态栏下降的问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 
     implementation project(':videoPlayer')
+
+    implementation 'com.geyifeng.immersionbar:immersionbar:3.2.1'
 }
